--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "remixicon-react": "^1.0.0",
     "sass": "^1.58.3"
   },
   "devDependencies": {
